--- a/app/apps/themes/my_theme/views/admin/settings.html.erb
+++ b/app/apps/themes/my_theme/views/admin/settings.html.erb
@@ -1,2 +1,14 @@
-<!-- This page is viewed on admin->settings->site settings->tab theme -->
-<!-- You can add your custom html contents here, but don't forget to save the values with hook on_theme_settings -->
+<div class="form-group">
+    <%= label_tag 'Phone' %>
+    <%=text_field_tag 'theme_option[phone_info]', current_theme.get_option('phone_info'), class: 'form-control' %>
+</div>
+
+<div class="form-group">
+    <%= label_tag 'Email' %>
+    <%=text_field_tag 'theme_option[email_info]', current_theme.get_option('email_info'), class: 'form-control' %>
+</div>
+
+<div class="form-group">
+    <%= label_tag 'Address' %>
+    <%=text_field_tag 'theme_option[address_info]', current_theme.get_option('address_info'), class: 'form-control' %>
+</div>
